# Mozaic-generator

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
mozaik/: __init__.py  __main__.py  cli.py  color_matcher.py  composer.py  grid.py  mosaic.py  tile_loader.py  utils.py
tests/: conftest.py  test_color_matcher.py  test_composer.py  test_grid.py  test_tile_loader.py
